templates de listados modifique los templates de los perfiles, cambie la grilla para que se vean mejor

--- a/ArmaTuFecha/src/main/resources/templates/listado-musicos2.html
+++ b/ArmaTuFecha/src/main/resources/templates/listado-musicos2.html
@@ -47,10 +47,10 @@
 		      <div class="container text-center">    
 		        <div class="row">
 		        	<div class="col-12">
-		        		<h1>Revisa los perfiles y encontrá el mejor lugar<br>para hacer tu fecha</h1>
+		        		<h1>Revisa los perfiles y encontrá las mejores bandas<br>para armar tu fecha</h1>
 		        	</div>
 		        </div>
-	 <!-- TO DO select para buscar/"filtrar" por provincia y localidad-->             
+	 <!-- TO DO select para buscar/"filtrar" por provincia y localidad, y generos musicales-->             
      </header>
     <!-- Page Content -->
     <section id="about">
@@ -58,18 +58,18 @@
 
       <!-- Page Heading -->
       <div class="row">
-        <div class="col-lg-4 col-sm-6 portfolio-item" th:each="perfilLocal:${listadoLocales}">
+        <div class="col-lg-4 col-sm-6 portfolio-item" th:each="perfilMusico:${listadoMusicos}">
           <div class="card h-100">
             <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a th:href="'/vista-perfil-local/' + ${perfilLocal.id_usuario}" th:text="${perfilLocal.nombre}">Project One</a>
+                <a th:href="'/vista-perfil-musico/' + ${perfilMusico.id_usuario}" th:text="${perfilMusico.nombre}">Project One</a>
               </h4>
               <p class="card-text" >
-                    <label>Dirección:&nbsp; </label><label th:text="${perfilLocal.direccion}">Dirección</label><br>
-					<label>Teléfono:&nbsp; </label><label th:text="${perfilLocal.telefono}">Teléfono</label><br>
-					<label>Mail:&nbsp; </label><label th:text="${perfilLocal.mail_contacto}">Mail</label><br>
-					<a th:href="${perfilLocal.red_social1}">Facebook</a><br></br>
+                    <label>Dirección:&nbsp; </label><label th:text="${perfilMusico.ubicacion}">Dirección</label><br>
+					<label>Teléfono:&nbsp; </label><label th:text="${perfilMusico.telefono}">Teléfono</label><br>
+					<label>Mail:&nbsp; </label><label th:text="${perfilMusico.mail_contacto}">Mail</label><br>
+					<a th:href="${perfilMusico.red_social1}">Facebook</a><br></br>
               </p>
             </div>
           </div>
