--- a/ArmaTuFecha/src/main/resources/templates/editar-perfil-local.html
+++ b/ArmaTuFecha/src/main/resources/templates/editar-perfil-local.html
@@ -60,20 +60,65 @@
 					
 					<div class="row">
 						<div class="col-12">
-							<form class="form-group" th:action="'/locales/mi-perfil/procesar-edicion/' + ${id_usuario}" method="POST">
+							<form class="form-group needs-validation" novalidate th:action="'/locales/mi-perfil/procesar-edicion/' + ${id_usuario}" method="POST">
 								
-								<label>*Nombre del lugar:&nbsp;</label><input class="form-control" name="nombre" type="text" th:value="${nombre}"></input>
+								<label>*Nombre del lugar:&nbsp;</label><input class="form-control" name="nombre" type="text" th:value="${nombre}" required></input>
+							    <div class="invalid-feedback">Por favor completa este campo.</div>
+							    <div class="valid-feedback"></div>
 								<br></br>
-								<label>*Dirección (provincia, localidad, calle, altura):&nbsp;</label><input class="form-control" name="direccion" type="text" th:value="${direccion}"></input>
+								<div class="form-group">
+							    <label>*Provincia:</label>
+							    <select multiple class="form-control" id="exampleFormControlSelect2" name="provincia" th:value="${provincia}" required>
+							      <option>Buenos Aires</option>
+							      <option>Catamarca</option>
+							      <option>Chaco</option>
+							      <option>Chubut</option>
+							      <option>Córdoba</option>
+							      <option>Corrientes</option>
+							      <option>Entre Ríos</option>
+							      <option>Formosa</option>
+							      <option>Jujuy</option>
+							      <option>La Pampa</option>
+							      <option>La Rioja</option>
+							      <option>Mendoza</option>
+							      <option>Misiones</option>
+							      <option>Neuquén</option>
+							      <option>Río Negro</option>
+							      <option>Salta</option>
+							      <option>San Juan</option>
+							      <option>San Luis</option>
+							      <option>Santa Cruz</option>
+							      <option>Santa Fe</option>
+							      <option>Santiago del Estero</option>
+							      <option>Tierra del Fuego</option>
+							      <option>Tucumán</optio>
+							    </select>
+							    <div class="invalid-feedback">Por favor selecciona una provincia.</div>
+							    <div class="valid-feedback"></div>
+							    </div>
+							    <label>*Localidad:&nbsp;</label><input class="form-control" name="localidad" type="text" th:value="${localidad}" required></input>
+								<div class="invalid-feedback">Por favor completa este campo.</div>
+								<div class="valid-feedback"></div>
 								<br></br>
-								<label>*Teléfono de contacto para organizar fechas:&nbsp;</label><input class="form-control" name="telefono" type="text" th:value="${telefono}"></input>
+								<label>*Dirección (provincia, localidad, calle, altura):&nbsp;</label><input class="form-control" name="direccion" type="text" th:value="${direccion}" required></input>
+								<div class="invalid-feedback">Por favor completa este campo.</div>
+								<div class="valid-feedback"></div>
 								<br></br>
-								<label>*e-mail para contacto:&nbsp;</label><input class="form-control" name="mail_contacto" type="email" th:value="${mail_contacto}"></input>
+								<label>*Teléfono de contacto para organizar fechas:&nbsp;</label><input class="form-control" name="telefono" type="text" th:value="${telefono}" required></input>
+								<div class="invalid-feedback">Por favor completa este campo.</div>
+								<div class="valid-feedback"></div>
+								<br></br>
+								<label>*e-mail para contacto:&nbsp;</label><input class="form-control" name="mail_contacto" type="email" th:value="${mail_contacto}" required></input>
+								<div class="invalid-feedback">Por favor completa este campo.</div>
+								<div class="valid-feedback"></div>
 								<br></br>
 								<label>*Descripción del lugar (máx. 1400 caracteres). Debe incluir: tipo de establecimiento, equipamiento de sonido,
 								arreglo con los músicos (puerta para las bandas, arreglo 70-30 o similar por entradas, pago de un cashé, etc.), capacidad, estilos musicales de los shows):</label>
+								
 								<br></br>
-								<textarea class="form-control textarea-height" name="descripcion" type="text" maxlength="1400" th:text="${descripcion}"></textarea>
+								<textarea class="form-control textarea-height" name="descripcion" type="text" maxlength="1400" th:text="${descripcion}" required></textarea>
+								<div class="invalid-feedback">Por favor completa este campo.</div>
+								<div class="valid-feedback"></div>
 								<br></br>
 								<label>Links a redes sociales:&nbsp;</label><br></br>
 								<label>Facebook:&nbsp;</label><input class="form-control" name="red_social1" type="url" th:value="${red_social1}"></input><br></br>
@@ -108,6 +153,7 @@
 			<!-- Custom JavaScript for this theme -->
 			<script src="/js/scrolling-nav.js"></script>
 			<script src="/js/formulario.js"></script>
+			<script src="/js/validacionform.js"></script>
 		
 		</body>
 
