--- a/ArmaTuFecha/src/main/resources/templates/listado-musicos.html
+++ b/ArmaTuFecha/src/main/resources/templates/listado-musicos.html
@@ -1,44 +1,124 @@
-<!doctype html>
-<html>
-	<head>
-		<title>Bandas</title>
-			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"></link>
-		
-			<link rel="stylesheet" type="text/css" href="/css/estilos.css"></link>
-			<meta charset="UTF-8"></meta>
-			
-			<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-	
-	</head>
-		
-		<body>
-			<div class="container">
-				<div class="row">
-					<header class="col-12">
-						<h1>Bandas</h1>
-					
-					</header>
-						
-						<div class="tarjeta-perfilMusico" th:each="perfilMusico:${listadoMusicos}">
-							<label>Nombre:&nbsp; </label><a th:href="'/vista-perfil-musico/' + ${perfilMusico.id_usuario}" th:text="${perfilMusico.nombre}">Nombre</a><br></br>
-							<label>Ubicación:&nbsp; </label><label th:text="${perfilMusico.ubicacion}">Ubicación</label><br></br>
-							<label>Telefono:&nbsp; </label><label th:text="${perfilMusico.telefono}">Teléfono</label><br></br>
-							<label>Mail:&nbsp; </label><label th:text="${perfilMusico.mail_contacto}">Mail</label><br></br>
-							<a th:href="${perfilMusico.red_social1}">Facebook</a><br></br>
-							<!-- mostrar 1 foto -->
-				
-											
-					
-					</div>
-				
-				</div>
-			
-			</div>
-		
-		</body>
-	
+<!DOCTYPE html>
+<html lang="es">
 
+  <head>
+
+    <meta charset="utf-8"></meta>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"></meta>
+   
+
+    <title>Lugares donde tocar</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"></link>
+
+    <!-- Custom styles for this template -->
+    <link href="/css/3-col-portfolio.css" rel="stylesheet"></link>
+    <link href="css/scrolling-nav.css" rel="stylesheet"></link>
+    <link rel="stylesheet" type="text/css" href="/css/estilos.css"></link>
+
+  </head>
+
+  <body>
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top"
+		id="mainNav">
+		<div class="container">
+			<a class="navbar-brand js-scroll-trigger" href="#page-top">Arma
+				Tu Fecha</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse"
+				data-target="#navbarResponsive" aria-controls="navbarResponsive"
+				aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarResponsive">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item"><a class="nav-link js-scroll-trigger"
+						href="/">Home</a></li>
+					<li class="nav-item"><a class="nav-link js-scroll-trigger"
+						href="/login">Log in</a></li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+
+	<header class="bg-primary text-white" id="color1">
+		      <div class="container text-center">    
+		        <div class="row">
+		        	<div class="col-12">
+		        		<h1>Revisa los perfiles y encontrá las mejores bandas<br>para armar tu fecha</h1>
+		        	</div>
+		        </div>
+	 <!-- TO DO select para buscar/"filtrar" por provincia y localidad, y generos musicales-->             
+     </header>
+    <!-- Page Content -->
+    <section id="about">
+    <div class="container">
+
+      <!-- Page Heading -->
+      <div class="row">
+        <div class="col-lg-4 col-sm-6 portfolio-item" th:each="perfilMusico:${listadoMusicos}">
+          <div class="card h-100">
+            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a th:href="'/vista-perfil-musico/' + ${perfilMusico.id_usuario}" th:text="${perfilMusico.nombre}">Project One</a>
+              </h4>
+              <p class="card-text" >
+                    <label th:text="${perfilMusico.provincia} + ', '"></label>&nbsp;<label th:text="${perfilMusico.localidad}"></label><br>
+					<label>Teléfono:&nbsp; </label><label th:text="${perfilMusico.telefono}">Teléfono</label><br>
+					<label>Mail:&nbsp; </label><label th:text="${perfilMusico.mail_contacto}">Mail</label><br>
+					<a th:href="${perfilMusico.red_social1}">Facebook</a><br></br>
+              </p>
+            </div>
+          </div>
+        </div>
+     </div> 
+     </div>
+     </section>
+      <!-- /.row -->
+
+      <!-- Pagination -->
+      <ul class="pagination justify-content-center">
+        <li class="page-item">
+          <a class="page-link" href="#" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+            <span class="sr-only">Previous</span>
+          </a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="#">1</a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="#">2</a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="#">3</a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="#" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+            <span class="sr-only">Next</span>
+          </a>
+        </li>
+      </ul>
+
+   
+    <!-- /.container -->
+
+    <!-- Footer -->
+    <footer class="py-5 bg-dark">
+      <div class="container">
+        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2018</p>
+      </div>
+      <!-- /.container -->
+    </footer>
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="/vendor/jquery/jquery.min.js"></script>
+    <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  </body>
 
 </html>
