--- a/ArmaTuFecha/src/main/resources/templates/perfil-local.html
+++ b/ArmaTuFecha/src/main/resources/templates/perfil-local.html
@@ -59,6 +59,7 @@
 			<div class="row">
 				<div class="col-6">
 					<h3 class="my-3">Datos de contacto</h3>
+					<label th:text="${provincia} + ', '">Lorem Ipsum</label>&nbsp;<label th:text="${localidad}">Lorem Ipsum</label><br>
 		            <label th:text="${direccion}">Lorem Ipsum</label><br>
 		            <label th:text="${telefono}">a</label><br>
 		            <label th:text="${mail_contacto}">a</label><br>
