campos de busqueda en listado ruta de procesar busqueda

--- a/ArmaTuFecha/src/main/resources/templates/crear-perfil.html
+++ b/ArmaTuFecha/src/main/resources/templates/crear-perfil.html
@@ -173,7 +173,7 @@
 								<label>Instagram:&nbsp;</label><input class="form-control" name="red_social2" type="url" th:value="${red_social2Cargada}"></input><br></br>							
 								<label>Otro:&nbsp;</label><input class="form-control" name="red_social3" type="url" th:value="${red_social3Cargada}"></input><br></br>						
 								<!-- falta input para cargar fotos -->
-								<input class="btn btn-default" type="submit" value="Crear"></input>
+								<input class="btn btn-outline-dark" type="submit" value="Crear"></input>
 								<br></br>
 								<br></br>
 					        </form>			
@@ -258,7 +258,7 @@
 							<label>Bandcamp:&nbsp;</label><input class="form-control" name="link_musica2" type="url" th:value="${link_musicaCargado2}"></input><br></br>						
 							<label>Otro:&nbsp;</label><input class="form-control" name="link_musica3" type="url" th:value="${link_musicaCargado3}"></input><br></br>						
 							<!-- falta input para cargar fotos -->
-							<input class="btn btn-default" type="submit" value="Crear"></input>	
+							<input class="btn btn-outline-dark" type="submit" value="Crear"></input>	
 				
 						</form>		
 					
