--- a/ArmaTuFecha/src/main/resources/static/css/estilos.css
+++ b/ArmaTuFecha/src/main/resources/static/css/estilos.css
@@ -15,12 +15,38 @@
 	
 }
 
+#bootstrap-override-col3 {
+	padding-top: 25px;
+	margin: 20px;
+	margin-top: 30px;
+	
+}
+
+#bootstrap-override-col4 {
+	padding-top: 50px;
+	padding-bottom: 40px;
+	margin: 20px;
+	margin-top: 30px;
+}
+
+#bootstrap-override-col5 {
+	padding-top: 0px;
+	padding-bottom: 0px;
+	margin: 0px;
+	margin-top: 0px;
+	
+}
 .bootstrap-override-header {
 	padding-bottom: 80px !important;
 }
 
+
 .bootstrap-override-section {
 	padding-top: 100px !important;
+}
+
+.bootstrap-override-section2 {
+	padding-top: 0px !important;
 }
 
 #btn1 {
