--- a/ArmaTuFecha/src/main/resources/templates/listado-locales.html
+++ b/ArmaTuFecha/src/main/resources/templates/listado-locales.html
@@ -16,6 +16,7 @@
     <link href="/css/3-col-portfolio.css" rel="stylesheet"></link>
     <link href="css/scrolling-nav.css" rel="stylesheet"></link>
     <link rel="stylesheet" type="text/css" href="/css/estilos.css"></link>
+    
 
   </head>
 
@@ -46,17 +47,42 @@
 	<header class="bg-primary text-white" id="color1">
 		      <div class="container text-center">    
 		        <div class="row">
-		        	<div class="col-12">
+		        	<div class="col-12" >
 		        		<h1>Revisa los perfiles y encontrá el mejor lugar<br>para hacer tu fecha</h1>
 		        	</div>
-		        </div>
+		        </div>	
+				
+		       </div>
+		      
 	 <!-- TO DO select para buscar/"filtrar" por provincia y localidad-->             
      </header>
     <!-- Page Content -->
-    <section id="about">
+    <section id="about" class="bootstrap-override-section2">
     <div class="container">
+			<div class="row">
+				<div class="col-12" id="bootstrap-override-col3">
+					<h5>O probá nuestras opciones de búsqueda...</h5>
+					<br>
+					<form class="form-group" action="/locales/busqueda/procesar">
+						<div class="col">
+							<input name="busquedaNombre" type="text" class="form-control"
+								placeholder="Buscá un lugar por su nombre..."></input><br>
+						</div>
+						<div class="col">
+							<input name="busquedaProvincia" type="text" class="form-control"
+								placeholder="Buscá por provincia..."></input><br>
+						</div>
 
-      <!-- Page Heading -->
+						
+							<div class="col text-center">
+								<input class="btn btn-outline-dark btn-lg" type="submit"
+									value="Buscar"></input>
+							</div>
+						
+					</form>
+				</div>
+			</div>
+			<!-- Page Heading -->
       <div class="row">
         <div class="col-lg-4 col-sm-6 portfolio-item" th:each="perfilLocal:${listadoLocales}">
           <div class="card h-100">
