--- a/ArmaTuFecha/src/main/resources/templates/login.html
+++ b/ArmaTuFecha/src/main/resources/templates/login.html
@@ -45,6 +45,7 @@
         	<div class="col-12">
         		<h1 th:text="${mensaje_bienvenida}"></h1>
         		<h1>Log in</h1>
+        		<h4 th:text="${login_incorrecto}"></h4>
         	</div>
         </div>
         <form class="form-group" action="/procesar-login" method="POST">
